# ChangeLog for net-p2p/rtorrent
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/rtorrent/ChangeLog,v 1.131 2009/02/15 15:08:02 ranger Exp $

  15 Feb 2009; Brent Baude <ranger@gentoo.org> rtorrent-0.8.4-r1.ebuild:
  Marking rtorrent-0.8.4-r1 ppc for bug 255756

  15 Feb 2009; Markus Meier <maekke@gentoo.org> rtorrent-0.8.4-r1.ebuild:
  amd64/x86 stable, bug #255756

  12 Feb 2009; Brent Baude <ranger@gentoo.org> rtorrent-0.8.4-r1.ebuild:
  Marking rtorrent-0.8.4-r1 ppc64 for bug 255756

*rtorrent-0.8.4-r1 (26 Dec 2008)

  26 Dec 2008; Jeremy Olexa <darkside@gentoo.org> +files/rtorrentd.conf,
  +files/rtorrentd.init, metadata.xml, -rtorrent-0.8.4.ebuild,
  +rtorrent-0.8.4-r1.ebuild:
  Add a new USE=daemon flag to provide init scripts. bug #250578

*rtorrent-0.8.4 (19 Nov 2008)

  19 Nov 2008; Peter Alfredsen <loki_val@gentoo.org> +rtorrent-0.8.4.ebuild:
  Bumb

  04 Oct 2008; Peter Alfredsen <loki_val@gentoo.org> rtorrent-0.7.9.ebuild,
  rtorrent-0.8.2-r3.ebuild, rtorrent-0.8.3.ebuild:
  Propagate fix to other versions. Hrmm...

  04 Oct 2008; Peter Alfredsen <loki_val@gentoo.org>
  rtorrent-0.8.2-r5.ebuild:
  Fix bug 239666, missing pkgconfig. Thanks to Evil Compile Person
  <bugs@dev.gentooexperimental.org>.

  04 Oct 2008; Brent Baude <ranger@gentoo.org> rtorrent-0.8.2-r5.ebuild:
  Marking rtorrent-0.8.2-r5 ppc64 for bug 238611

  27 Sep 2008; Dawid Węgliński <cla@gentoo.org> rtorrent-0.8.2-r5.ebuild:
  Stable on x86 (bug #238611)

  27 Sep 2008; nixnut <nixnut@gentoo.org> rtorrent-0.8.2-r5.ebuild:
  Stable on ppc wrt bug 238611

  26 Sep 2008; Jeroen Roovers <jer@gentoo.org> rtorrent-0.8.2-r5.ebuild:
  Stable for HPPA (bug #238611).

  25 Sep 2008; Kenneth Prugh <ken69267@gentoo.org> rtorrent-0.8.2-r5.ebuild:
  amd64 stable, bug #238611

*rtorrent-0.8.3 (16 Sep 2008)

  16 Sep 2008; Peter Alfredsen <loki_val@gentoo.org>
  rtorrent-0.8.2-r3.ebuild, -rtorrent-0.8.2-r4.ebuild,