@@ -12,10 +12,10 @@ DIST rtorrent-0.7.9.tar.gz 489174 RMD160 8cfee138c0142ad22830b3d518e198f163063a8
 DIST rtorrent-0.8.2.tar.gz 506015 RMD160 e86b0082d1788e4e7cd8fcf631f7f857d642c799 SHA1 891093c5d600c2e3853eadbbec369a12dfe6ec11 SHA256 76135a63869e43fa0392829bb45d94c0aa55e94350dddc272685ccfac1bbb2ed
 DIST rtorrent-0.8.3.tar.gz 512961 RMD160 bbb51aa44b72ed34c53bfd20dd15fa4aafe302d5 SHA1 c6233de4b4b8d3901472696581ed88a0cd07d11d SHA256 554456550ca6e792297d6d39367120af5b2bd6181d514a43faf4e2f565721908
 DIST rtorrent-0.8.4.tar.gz 518306 RMD160 a7a65a136161dc89e93479cee776cc084dce4ee0 SHA1 83a7c0dbeb46bb074ae075d9faf5d05f0df17571 SHA256 257722380b39e84e700e9f2d2f6600ba724723f1ed59327bfce47a57d293eeee
-EBUILD rtorrent-0.7.9.ebuild 1364 RMD160 43155eca2077d2f2c4e62ec884b036f0887a00ce SHA1 1a97386be094560cd705cf6c6566da4e3ade4539 SHA256 68415326f5b63c55ac91a7c41b7a53e67f9ec605e6b59b87fb49a0045fd49a31
-EBUILD rtorrent-0.8.2-r3.ebuild 1996 RMD160 f7e79a1f76b11e9d59e4af5c60b2a89d97713ac6 SHA1 8acc409d9d2c6263e2ec9501be394237f3ea158d SHA256 348c66138651d980276e063b30b7a16b925bc3f687d5b238a674f1a6f44baaab
-EBUILD rtorrent-0.8.2-r5.ebuild 2168 RMD160 77e38473608b8fae5f6cc036be1c1c3d30cbe5e8 SHA1 1ce147355c5ee6a11fdf9c12999ef5b9e7493b21 SHA256 f7bd0eb28231780df7872acc3bf1c1f6da6ec1e4b72b4bfe1452f6287c44ecfc
-EBUILD rtorrent-0.8.3.ebuild 1761 RMD160 4f46ec59f38ff573eb95f78eb00161fca9324730 SHA1 c09803ef1e9963d4361e103f615c8bc1eb2bb1ce SHA256 a54022724e29be0325275320a9bd137024a446bbe66011a4da0d2d94f55313fb
-EBUILD rtorrent-0.8.4-r1.ebuild 2011 RMD160 aa59e3635aaf5107eba11eed2bec3e44976ee3e5 SHA1 359bf2ccb3e02a609ba057289b793dc4996ba6f4 SHA256 72a95bb8f92acdea32a987334c08f054b5e7f000b8e35dee030ab94472f1e805
-MISC ChangeLog 19120 RMD160 7ea3ca25c18155fd68f5b927221e1ffbcfb26fcf SHA1 7d2dfccaa8fb122ddad2eaaada95e8092af7c961 SHA256 57244b04964b52d849d950447602ce5806da5abacbc2e092db82713cf8f9f6d5
+EBUILD rtorrent-0.7.9.ebuild 1365 RMD160 86f16d30b868c39ebed2e48d26191aa312d549a6 SHA1 af781a93630a3c278c8508c21dc7bbd99ca739b4 SHA256 68e4a6c192644a089d9d72bd3df701c5c63c586fdf5d0aab9bd8520d5e32caea
+EBUILD rtorrent-0.8.2-r3.ebuild 1996 RMD160 0c62b9c6ab7ae74df99a60842b24b1d29bacae43 SHA1 fdce3f988946d8830f55e7aaf1498537d00ef1e4 SHA256 cd66ba88245fe38c99dd119300d68c1ff410f05ec0e1a7fba2255da32ee6e90f
+EBUILD rtorrent-0.8.2-r5.ebuild 2168 RMD160 a378aa6a6d8e77146445d40e07cca93ae1b13d4f SHA1 228a523068cfa4176f834b81ee4d9ec61d02959a SHA256 e76f62ee5bdd972ea7bcce669ad0a0c073248a36f24a8097d45c39c03929c536
+EBUILD rtorrent-0.8.3.ebuild 1760 RMD160 7cf0efe35f708f3128ed92cc10f6ead195884203 SHA1 deb8dbff10967cc44c6a44f9927f5fb7036fdabb SHA256 c7d856354411af8024d340e0932a599b3b856c3ed0a10efa025d70aec1521713
+EBUILD rtorrent-0.8.4-r1.ebuild 2013 RMD160 00b30c6520a0df92b42528044d5123fc0da350bc SHA1 3efcf782bce0b5824fc59e420cf9175d9613bbdb SHA256 d16c485fdebdff7e49798cae514ed799ec2a3c962f53f5e867c6727b57294975
+MISC ChangeLog 19454 RMD160 c881f0e03c0167f29b944af7daccc5f8ca5445a6 SHA1 330fec43cf3c533b2aeb3a789ceae608ef0c0276 SHA256 1df161f11b4d1da0a2337b40c6e839eccc98e8ec26cce03ab79736d14b483f4e
 MISC metadata.xml 834 RMD160 6dfc56bd58b08c2be67506de9f22e186de2abe81 SHA1 3aaf9f22e1697b291f9d7564b48416d4f9231057 SHA256 6b74449e8e0a52a8b36f82e855d52e14d47e7a7bd76a7f66b9da2a66ff981eda
