@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/rtorrent/rtorrent-0.8.4-r1.ebuild,v 1.4 2009/02/15 15:08:02 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/rtorrent/rtorrent-0.8.4-r1.ebuild,v 1.5 2009/03/01 19:52:19 loki_val Exp $
 
 EAPI="prefix"
 
@@ -57,7 +57,7 @@ src_install() {
 pkg_postinst() {
 	elog "rtorrent now supports a configuration file."
 	elog "A sample configuration file for rtorrent can be found"
-	elog "in ${EROOT}usr/share/doc/${PF}/rtorrent.rc.gz."
+	elog "in rtorrent.rc in ${EROOT}usr/share/doc/${PF}/"
 	elog ""
 	ewarn "If you're upgrading from rtorrent <0.8.0, you will have to delete your"
 	ewarn "session directory or run the fixSession080-c.py script from this address:"
