@@ -1,6 +1,12 @@
 # ChangeLog for net-p2p/rtorrent
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/rtorrent/ChangeLog,v 1.131 2009/02/15 15:08:02 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/rtorrent/ChangeLog,v 1.132 2009/03/01 19:52:19 loki_val Exp $
+
+  01 Mar 2009; Peter Alfredsen <loki_val@gentoo.org> rtorrent-0.7.9.ebuild,
+  rtorrent-0.8.2-r3.ebuild, rtorrent-0.8.2-r5.ebuild, rtorrent-0.8.3.ebuild,
+  rtorrent-0.8.4-r1.ebuild:
+  Fix description of rtorrent.rc location to take into account compression
+  of doc files. Bug 260772. Thanks to Victor Ostorga <vostorga@gmail.com>.
 
   15 Feb 2009; Brent Baude <ranger@gentoo.org> rtorrent-0.8.4-r1.ebuild:
   Marking rtorrent-0.8.4-r1 ppc for bug 255756
